<resources>
    <string name="app_name">Project_SM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="firstName">First name</string>
    <string name="usersFristName">User\'s firstname</string>
    <string name="surname">Surname</string>
    <string name="user_s_surname">User\'s surname</string>
    <string name="email">Email</string>
    <string name="usersEmail">User\'s email</string>
    <string name="username">Username</string>
    <string name="usernameHint">User\'s Username</string>
    <string name="password">Password</string>
    <string name="password2">Password</string>
    <string name="register">Register</string>
    <string name="register2">Register</string>
    <string name="log_out">Log out</string>
    <string name="add_a_room">Add a room</string>
    <string name="room_number">Room number</string>
    <string name="capacity">Capacity</string>
    <string name="room_name">Room name</string>
    <string name="nameRoom">name</string>
    <string name="number">number</string>
    <string name="capacityHint">capacity</string>
    <string name="select_a_room">Select a room</string>
    <string name="settings">Settings</string>
    <string name="rooms">Rooms</string>
    <string name="reservations">Reservations</string>
    <string name="list_with_reservations">List with reservations</string>
    <string name="addReservation">Add a reservation</string>
    <string name="exit">Exit</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="addReservationBt">Add a reservation</string>
    <string name="hour">hour</string>
    <string name="numberOfHours">Number of hours</string>
    <string name="go_back">Go Back</string>
    <string name="english">English</string>
    <string name="polish">Polish</string>
</resources>