<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/room_number"/>

        <EditText
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:inputType="numberDecimal"
            android:id="@+id/etRoomNumber"
            android:layout_marginLeft="26dp"
            android:hint="@string/number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/capacity"/>

        <EditText
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/etCapacity"
            android:inputType="numberDecimal"
            android:layout_marginLeft="76dp"
            android:hint="@string/capacityHint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="120dp"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/room_name"/>

        <EditText
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/etRoomName"
            android:layout_marginLeft="48dp"
            android:hint="@string/nameRoom"/>

    </LinearLayout>


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:id="@+id/btAddRoom"
        android:background="@color/CornflowerBlue"
        android:gravity="center"
        android:layout_marginLeft="60dp"
        android:text="@string/add_a_room"/>


</RelativeLayout>