<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <LinearLayout
        android:id="@+id/register_ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <TextView
            android:layout_width="9dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/firstName"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/usersFristName"
            android:inputType="textCapSentences"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_ll1"
        android:gravity="center"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/surname"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/user_s_surname"
            android:inputType="textCapSentences"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_ll2"
        android:gravity="center">

        <TextView
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/usersEmail"
            android:inputType="textEmailAddress"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_ll4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_ll3"
        android:gravity="center"
        android:weightSum="2">

        <TextView
            android:layout_width="17dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/username"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etUsernameRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/usernameHint"
            android:inputType="textCapSentences"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_ll5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_ll4"
        android:gravity="center">

        <TextView
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:text="@string/password2"
            android:textSize="19dp" />

        <EditText
            android:id="@+id/etPasswordRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="31dp"
            android:layout_weight="1"
            android:hint="User's Password"
            android:inputType="textPassword"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/register_ll5"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@color/CornflowerBlue"
            android:gravity="center"
            android:text="@string/register" />

        <Button
            android:id="@+id/finishRegisterBTN"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/CornflowerBlue"
            android:gravity="center"
            android:text="@string/go_back" />

    </LinearLayout>


</RelativeLayout>