<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_launcher_foreground" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="@color/CornflowerBlue"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:hint="@string/username"
            android:textColor="#FFF"
            android:textColorHint="#FFF" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimary"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#FFF"
            android:textColorHint="#FFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"

            android:gravity="center">


            <Button
                android:id="@+id/btLogin"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:hint="@string/login"
                android:textColor="#FFF"
                android:textColorHint="#FFF" />

            <Button
                android:id="@+id/btRegisterInLogin"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:hint="@string/register2"
                android:textColor="#FFF"
                android:textColorHint="#FFF" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"

            android:gravity="center">


            <Button
                android:id="@+id/changePolish"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:hint="@string/polish"
                android:textColor="#FFF"
                android:textColorHint="#FFF" />

            <Button
                android:id="@+id/changeEnglish"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:hint="@string/english"
                android:textColor="#FFF"
                android:textColorHint="#FFF" />


        </LinearLayout>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/cotent_frame2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>
</RelativeLayout>