<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/start_date"/>

        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:inputType="numberDecimal"
            android:id="@+id/etStartDate"
            android:layout_marginLeft="26dp"
            android:hint="@string/start_date"/>

        <EditText
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:inputType="numberDecimal"
            android:id="@+id/etStartHour"
            android:layout_marginLeft="26dp"
            android:hint="@string/hour"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/numberOfHours"/>

        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/etEndDate"
            android:maxLength="1"
            android:inputType="numberDecimal"
            android:layout_marginLeft="34dp"
            android:hint="@string/numberOfHours"/>


    </LinearLayout>


    <Button
        android:id="@+id/btAddReservation"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="11dp"
        android:background="@color/CornflowerBlue"
        android:gravity="center"
        android:text="@string/addReservationBt" />

    <ListView
        android:layout_below="@id/btAddReservation"
        android:id="@+id/add_reservationLV"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ListView>


</RelativeLayout>